Fix header spacing on mobile for balanced margins

--- a/css/style.css
+++ b/css/style.css
@@ -604,7 +604,7 @@ section {
     }
 
     .navbar {
-        padding-left: 1rem;
+        padding-left: 1.5rem;
         padding-right: 1rem;
     }
     
